--- a/exercises/ex5/p5.tex
+++ b/exercises/ex5/p5.tex
@@ -56,9 +56,9 @@ Assume that we are able to use a distributed memory multiprocess computer with t
 following characteristics for the interconnect: the time to send a
 message with $k$ bytes, $\tau_C(k)$, can be approximated as 
 \begin{eqnarray*}
-\tau_C(k) = \tau_S + \gamma \cdot k \,\,\,\,\,\,\,\,\,\, .
+\tau_C(k) = \tau_S + \beta \cdot k \,\,\,\,\,\,\,\,\,\, .
 \end{eqnarray*}
-Here, $\tau_S$ is a fixed startup time, and $\gamma$ is the inverse bandwidth.
+Here, $\tau_S$ is a fixed startup time, and $\beta$ is the inverse bandwidth.
 For our computer, $\tau_S = 1\cdot 10^{-6} \,s$ and $\beta = 1.25\cdot  10^{-9}\, s/byte$.\\
 \\
 (a) How many bytes can we send in a single message before the time to send a message 
